style: fix merge toolbar z-index

--- a/packages/monaco/src/browser/contrib/merge-editor/view/merge-editor.module.less
+++ b/packages/monaco/src/browser/contrib/merge-editor/view/merge-editor.module.less
@@ -30,7 +30,8 @@
     background: var(--kt-panelTab-activeBackground);
     box-shadow: inset 1px 1px 3px 0px var(--kt-panelTab-border);
     padding: 16px 28px;
-    z-index: 1;
+    // minimap's z-index is 5
+    z-index: 6;
 
     .container_box {
       display: flex;
